Avance de Samuel, se agrego el js  y se agregaron las referencias hacia la pasarela de pago

--- a/html/cart.html
+++ b/html/cart.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="checkout-button">
-                        <button>CONTINUAR COMPRA</button>
+                        <a href="./pago.html"><button>CONTINUAR COMPRA</button></a>
                     </div>
                 </div>
             </div>
