--- a/html/pago.html
+++ b/html/pago.html
@@ -70,7 +70,7 @@
 
                 <h3>Información de Facturación</h3>
 
-                <div class="billing-info">
+                <div class="fact-info">
                     <label>Nombre</label>
                     <input type="text" placeholder="">
 
@@ -106,30 +106,40 @@
             </form>
         </div>
 
-        <!-- Compra segura -->>
-        <section class="security">
-            <h2>SIÉNTETE SEGURO CON TU COMPRA EN SNEAK EMPIRE</h2>
-            <div class="security-items">
-                <div class="item">
-                    <span class="icon"><strong>V</strong></span>
-                    <sTRong><p>Envío gratis por compras mayores a S/. 250</p></sTRong>
+        <div class="qrContainer">
+            <img class="qrImage" src="../img/Sneak Empire SA.png" alt="">
+        </div>
+            <!-- Compra segura -->
+            <section class="security">
+                <h2>SIÉNTETE SEGURO CON TU COMPRA EN SNEAK EMPIRE</h2>
+                <div class="security-items">
+                    <div class="item">
+                        <span class="icon"><strong>V</strong></span>
+                        <strong>
+                            <p>Envío gratis por compras mayores a S/. 250</p>
+                        </strong>
+                    </div>
+                    <div class="item">
+                        <span class="icon"><strong>V</strong></span>
+                        <strong>
+                            <p>Hasta 6 cuotas sin intereses</p>
+                        </strong>
+                    </div>
+                    <div class="item">
+                        <span class="icon"><strong>V</strong></span>
+                        <strong>
+                            <p>Devolución gratuita y fácil hasta en 30 días</p>
+                        </strong>
+                    </div>
                 </div>
-                <div class="item">
-                    <span class="icon"><strong>V</strong></span>
-                    <strong><p>Hasta 6 cuotas sin intereses</p></strong>
-                </div>
-                <div class="item">
-                    <span class="icon"><strong>V</strong></span>
-                    <strong><p>Devolución gratuita y fácil hasta en 30 días</p></strong>
-                </div>
-            </div>
-        </section>
+            </section>
     </main>
     <script src="../js/footer.js"></script>
     <script>
         loadFooter();
     </script>
     <script src="../js/header.js"></script>
+    <script src="../js/pago.js"></script>
 </body>
 
 </html>
